# ocaml-cordova-plugin-file

./: README.md  cordova-plugin-file.opam
.github/workflows/: main.yml
src/: cordova_file.mli  dune
